# .dotfiles

./: .chezmoiexternal.toml  .gitmodules  dot_gitconfig  dot_gitconfig.tmpl  dot_npmrc  dot_p10k.zsh  dot_zsh_plugins.txt  dot_zsh_plugins.zsh  dot_zshrc  executable_dot_prettierignore  executable_dot_prettierrc  install.sh  packages.exclude  packages.local  packages.txt  private_dot_histfile  private_dot_p10k.zsh.tmpl  private_dot_viminfo  private_dot_zsh_history  private_dot_zshenv  private_dot_zshrc  run_once_before_install.sh  run_once_post-install.zsh
dot_config/: private_mimeapps.list
dot_config/alacritty/: alacritty.toml
dot_config/autostart/: Proton Mail Bridge.desktop
dot_config/black/: pyproject.toml
dot_config/broot/: conf.hjson
dot_config/btop/: btop.conf
dot_config/fuzzel/: fuzzel.ini
dot_config/gtk-4.0/: settings.ini  symlink_assets  symlink_gtk-dark.css  symlink_gtk.css
dot_config/hypr/: executable_hyprland.lua  hyprland.conf  hyprlock.conf
dot_config/mise/: config.toml
dot_config/nvim/: executable_init.lua  executable_lazy-lock.json
dot_config/pgcli/: history  log
dot_config/private_dconf/: user
dot_config/private_gtk-3.0/: settings.ini
dot_config/private_pulse/: private_cookie
dot_config/pypoetry/: pyproject.toml
dot_config/qt6ct/: qt6ct.conf
dot_config/ruff/: dot_ruff.toml  (+2 more)
dot_librewolf/: README.md  containers.json  extensions.txt  extensions.yml  search.json.mozlz4
private_dot_local/scripts/smart-compress/: README.md  pyproject.toml
private_dot_local/scripts/smart-compress/src/smart_compress/: smart_compress.py
(+47 files in other folders)
