[project]
name = "smart-compress"
version = "0.1.0"
description = "Deterministic content-aware compression frontend for ffmpeg"
authors = [
    {name = "Emmanuel Asiimwe",email = "90935867+asiimwemmanuel@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pillow",
    "pysimdjson",
    "numpy (>=2.3.5,<3.0.0)",
]

[project.scripts]
smart-compress = "smart_compress:main"

[tool.poetry]
packages = [{include = "smart_compress", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0", "setuptools"]
# build-backend = "poetry.core.masonry.api"
build-backend = "setuptools.build_meta"
